# rust_bbs

./: README.md
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs  repositories.rs
front/: .eslintrc.yml  package.json  vite.config.js
front/src/: app.html  index.html
front/src/components/: Paging.svelte
front/src/js/: common.js
front/src/lib/api/: getposts.js
front/src/lib/components/: Paging.svelte
front/src/routes/: +error.svelte  +layout.svelte  +page.server.js  +page.svelte
zenn/: zenn.md
