[package]
name = "rust-bbs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.1"
axum-macros = "0.3.5"
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.24.1", features = ["full"] }
tower = "0.4.13"
mime = "0.3.16"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
anyhow = "1.0.68"
thiserror = "1.0.38"
askama = "0.11"
chrono = "0.4.23"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "mysql", "chrono" ] }
dotenv = "0.15.0"
http-body = "0.4.5"
validator = { version = "0.16.0", features = ["derive"] }
tower-http = { version = "0.4.0", features = ["cors"] }